@@ -39,6 +39,18 @@
 #include "func.h"
 
 
+cmdkw	functab[] = {
+		{"DEFINE", pmk_define},
+		{"TARGET", pmk_target},
+		{"CHECK_BINARY", pmk_check_binary},
+		{"CHECK_INCLUDE", pmk_check_include},
+		{"CHECK_LIB", pmk_check_lib},
+		{"CHECK_CONFIG", pmk_check_config}
+};
+
+int	nbfunc = sizeof(functab) / sizeof(cmdkw);
+
+
 /*
 	all the following functions have the same parameters :
 
